Testing moving juxtapose slider to fix layer visibility issue

--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,13 @@ height: 240px;
 width: 400px;
 }
 
+/* div for map selection buttons at bottom center of map */
 .mapSelectionButtons {
     user-select: none;
     transform: translateX(-50%);
     background-color: #fff;
-    padding: 10px;
-    border-radius: 5px;
+    padding: 0px;
+    border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -56,7 +57,7 @@ width: 400px;
     cursor : pointer;
     font-weight: bold;
     font-family:'Segoe UI';
-    }
+}
 
 #projectMapBtn{
     border-radius : 15px 0px 0px 15px;
@@ -67,31 +68,20 @@ width: 400px;
 }
 
 .leaflet-floating-button:hover {
-        background-color: rgba(0, 0, 0, 0.2);
-
-        /*box-shadow:0px 0px 0px 2px gray inset;*/
-        transition: 0.3s;
-    }
-
-
-.leaflet-floating-button:focus {
-    background-color: #6DC75C;
-    
+    box-shadow:0px 0px 0px 2px #6DC75C inset;
+    transition: 0.2s;
 }
 
 
 .leaflet-horizontalcenter {
-    /********************************************/
-    /* Same as .leaflet-left and .leaflet-right */
     position: absolute;
     z-index: 1000;
     pointer-events: none;
-    /********************************************/
     left: 50%;
-    /*transform: translateX(-50%);*/
     padding-top: 10px;
 }
     
 .leaflet-horizontalcenter .leaflet-control {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
+
